--- a/application-dev.yml
+++ b/application-dev.yml
@@ -6,4 +6,6 @@ eureka:
       client:
         register-with-eureka: true
         fetch-registry: true
+          instance:
+    prefer-ip-address: true
 
