--- a/application.-prod.yml
+++ b/application.-prod.yml
@@ -1,1 +1,11 @@
-
+spring:
+  application:
+    name: CONFIG-PROD
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+      client:
+        register-with-eureka: true
+        fetch-registry: true
+          
